Fix sidebar size/main content overflow

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -21,6 +21,10 @@ html, body {
     font-weight: 500;
 }
 
+body {
+    overflow-y: scroll;
+}
+
 #app {
     display: flex;
     flex-direction: column;
@@ -149,7 +153,8 @@ h4 {
     }
     main {
         margin: 2.75rem;
-        width: 50%;
+        width: 60%;
+        max-width: 60%;
     }
     main > * + * {
         margin-top: 3.5rem;
@@ -180,7 +185,6 @@ h4 {
     }
     main {
         margin: 3rem;
-        width: 60%;
         padding-right: 10%;
     }
     main > * + * {
